@@ -99,7 +99,9 @@ import org.apache.pig.tools.grunt.GruntParser;
  * 
  * This class is the program's connection to Pig. Typically a program will create a PigServer
  * instance. The programmer then registers queries using registerQuery() and
- * retrieves results using openIterator() or store().
+ * retrieves results using openIterator() or store(). After doing so, the
+ * shutdown() method should be called to free any resources used by the current
+ * PigServer instance. Not doing so could result in a memory leak.
  * 
  */
 public class PigServer {
@@ -752,7 +754,12 @@ public class PigServer {
         }
         return aliasPlans;
     }
-    
+
+    /**
+     * Reclaims resources used by this instance of PigServer. This method
+     * deletes all temporary files generated by the current thread while
+     * executing Pig commands.
+     */
     public void shutdown() {
         // clean-up activities
             // TODO: reclaim scope to free up resources. Currently
@@ -760,6 +767,8 @@ public class PigServer {
             // hence, for now, we won't call it.
         //
         // pigContext.getExecutionEngine().reclaimScope(this.scope);
+
+        FileLocalizer.deleteTempFiles();
     }
 
     public Set<String> getAliasKeySet() {
