@@ -37,6 +37,8 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1313: PigServer leaks memory over time (billgraham via daijy)
+
 Release 0.7.0 - Unreleased
 
 INCOMPATIBLE CHANGES
